tests/snapshots/snapshots__budget_anyhow_src_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (982 tokens)

backtrace.rs
    53→macro_rules! backtrace_if_absent {
    64→macro_rules! backtrace_if_absent {
    70→#[cfg(all(not(std_backtrace), feature = "backtrace"))]
    71→mod capture {

chain.rs
    36→    type Item = &'a (dyn StdError + 'static);

context.rs
     7→use crate::nightly::{self, Request};
    12→    pub trait StdError {
   189→    pub trait Sealed {}

ensure.rs
    10→pub trait BothDebug {
    25→pub trait NotBothDebug {

error.rs
     4→use crate::nightly::{self, Request};
     6→use crate::ptr::Mut;
   705→    type Target = dyn StdError + Send + Sync + 'static;

fmt.rs

kind.rs
    51→use crate::StdError;
    55→pub struct Adhoc;
    58→pub trait AdhocKind: Sized {
    77→pub struct Trait;
    80→pub trait TraitKind: Sized {
   100→pub struct Boxed;
   104→pub trait BoxedKind: Sized {

lib.rs
   251→#[macro_use]
   252→mod backtrace;
   260→#[cfg(error_generic_member_access)]
   261→mod nightly;
   286→pub use anyhow as format_err;
   390→pub struct Error {
   391→    inner: Own<ErrorImpl>,
   392→}
   415→pub struct Chain<'a> {
   416→    state: crate::chain::ChainState<'a>,
   417→}
   419→/// `Result<T, Error>`
   420→///
   421→/// This is a reasonable return type to use throughout your application but also
   422→/// for `fn main`; if you do, failures will be printed along with any
   423→/// [context][Context] and a backtrace if one was captured.
   424→///
   425→/// `anyhow::Result` may be used with one *or* two type parameters.
   426→///
   427→/// ```rust
   428→/// use anyhow::Result;
   429→///
      →…
   468→pub type Result<T, E = Error> = core::result::Result<T, E>;
   616→pub trait Context<T, E>: context::private::Sealed {
   655→#[doc(hidden)]
   656→pub mod __private {
   663→    pub use crate::ensure::{BothDebug, NotBothDebug};
   665→    pub use alloc::format;
   667→    pub use core::result::Result::Err;
   669→    pub use core::{concat, format_args, stringify};
   671→    #[doc(hidden)]
   672→    pub mod kind {
   674→        pub use crate::kind::{AdhocKind, TraitKind};
   678→        pub use crate::kind::BoxedKind;
   710→        pub trait Bool {

macros.rs
    70→macro_rules! __ensure {

nightly.rs
    10→pub use core::error::Request;

ptr.rs
     6→pub struct Own<T>
     7→where
     8→    T: ?Sized,
     9→{
    10→    pub ptr: NonNull<T>,
    11→}
    64→pub struct Ref<'a, T>
    65→where
    66→    T: ?Sized,
    67→{
    68→    pub ptr: NonNull<T>,
    69→    lifetime: PhantomData<&'a T>,
    70→}
   125→pub struct Mut<'a, T>
   126→where
   127→    T: ?Sized,
   128→{
   129→    pub ptr: NonNull<T>,
   130→    lifetime: PhantomData<&'a mut T>,
   131→}
   181→pub trait CastTo {
   182→    type Target;
   183→}
   186→    type Target = T;

wrapper.rs
     8→use crate::nightly::{self, Request};
    11→pub struct MessageError<M>(pub M);
    34→pub struct DisplayError<M>(pub M);
    58→pub struct BoxedError(pub Box<dyn StdError + Send + Sync>);
