tests/snapshots/snapshots__budget_anyhow_src_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (1995 tokens)

backtrace.rs
     2→pub(crate) use std::backtrace::{Backtrace, BacktraceStatus};
     5→pub(crate) use self::capture::{Backtrace, BacktraceStatus};
     8→pub(crate) enum Backtrace {}
    11→macro_rules! impl_backtrace {
    18→macro_rules! impl_backtrace {
    25→macro_rules! backtrace {
    32→macro_rules! backtrace {
    39→macro_rules! backtrace_if_absent {
    53→macro_rules! backtrace_if_absent {
    64→macro_rules! backtrace_if_absent {
    70→#[cfg(all(not(std_backtrace), feature = "backtrace"))]
    71→mod capture {

chain.rs
     5→use alloc::vec::{self, Vec};
     8→pub(crate) use crate::Chain;
    11→pub(crate) struct Chain<'a> {
    12→    state: ChainState<'a>,
      →    …
    16→pub(crate) enum ChainState<'a> {
    17→    Linked {
      →    …
    36→    type Item = &'a (dyn StdError + 'static);

context.rs
     7→use crate::nightly::{self, Request};
     9→mod ext {
    12→    pub trait StdError {
   186→pub(crate) mod private {
   189→    pub trait Sealed {}

ensure.rs
     9→#[doc(hidden)]
    10→pub trait BothDebug {
    24→#[doc(hidden)]
    25→pub trait NotBothDebug {
   105→macro_rules! __parse_ensure {
   886→macro_rules! __fancy_ensure {
   912→macro_rules! __fallback_ensure {

error.rs
     4→use crate::nightly::{self, Request};
     6→use crate::ptr::Mut;
    14→use core::ops::{Deref, DerefMut};
   705→    type Target = dyn StdError + Send + Sync + 'static;
   934→pub(crate) struct ErrorImpl<E = ()> {
   935→    vtable: &'static ErrorVTable,
      →    …
   952→pub(crate) struct ContextError<C, E> {
   953→    pub context: C,
      →    …

fmt.rs

kind.rs
    51→use crate::StdError;
    53→use alloc::boxed::Box;
    55→pub struct Adhoc;
    57→#[doc(hidden)]
    58→pub trait AdhocKind: Sized {
    77→pub struct Trait;
    79→#[doc(hidden)]
    80→pub trait TraitKind: Sized {
    99→#[cfg(any(feature = "std", not(anyhow_no_core_error)))]
   100→pub struct Boxed;
   102→#[cfg(any(feature = "std", not(anyhow_no_core_error)))]
   103→#[doc(hidden)]
   104→pub trait BoxedKind: Sized {

lib.rs
   251→#[macro_use]
   252→mod backtrace;
   253→mod chain;
   254→mod context;
   255→mod ensure;
   256→mod error;
   257→mod fmt;
   258→mod kind;
   259→mod macros;
   260→#[cfg(error_generic_member_access)]
   261→mod nightly;
   262→mod ptr;
   263→mod wrapper;
   270→use core::fmt::Debug;
   273→use std::error::Error as StdError;
   276→use core::error::Error as StdError;
   279→trait StdError: Debug + Display {
   286→pub use anyhow as format_err;
   288→/// The `Error` type, a wrapper around a dynamic error type.
   289→///
   290→/// `Error` works a lot like `Box<dyn std::error::Error>`, but with these
   291→/// differences:
   292→///
      →…
   390→pub struct Error {
   391→    inner: Own<ErrorImpl>,
   392→}
   394→/// Iterator of a chain of source errors.
   395→///
   396→/// This type is the iterator returned by [`Error::chain`].
   397→///
   398→/// # Example
      →…
   415→pub struct Chain<'a> {
   416→    state: crate::chain::ChainState<'a>,
   417→}
   419→/// `Result<T, Error>`
   420→///
   421→/// This is a reasonable return type to use throughout your application but also
   422→/// for `fn main`; if you do, failures will be printed along with any
   423→/// [context][Context] and a backtrace if one was captured.
   424→///
   425→/// `anyhow::Result` may be used with one *or* two type parameters.
   426→///
   427→/// ```rust
   428→/// use anyhow::Result;
   429→///
   430→/// # const IGNORE: &str = stringify! {
   431→/// fn demo1() -> Result<T> {...}
   432→///            // ^ equivalent to std::result::Result<T, anyhow::Error>
   433→///
   434→/// fn demo2() -> Result<T, OtherError> {...}
   435→///            // ^ equivalent to std::result::Result<T, OtherError>
   436→/// # };
   437→/// ```
   438→///
   439→/// # Example
   440→///
   441→/// ```
   442→/// # pub trait Deserialize {}
   443→/// #
   444→/// # mod serde_json {
   445→/// #     use super::Deserialize;
   446→/// #     use std::io;
   447→/// #
      →…
   468→pub type Result<T, E = Error> = core::result::Result<T, E>;
   470→/// Provides the `context` method for `Result`.
   471→///
   472→/// This trait is sealed and cannot be implemented for types outside of
   473→/// `anyhow`.
   474→///
      →…
   616→pub trait Context<T, E>: context::private::Sealed {
   655→#[doc(hidden)]
   656→pub mod __private {
   663→    pub use crate::ensure::{BothDebug, NotBothDebug};
   665→    pub use alloc::format;
   667→    pub use core::result::Result::Err;
   669→    pub use core::{concat, format_args, stringify};
   671→    #[doc(hidden)]
   672→    pub mod kind {
   674→        pub use crate::kind::{AdhocKind, TraitKind};
   678→        pub use crate::kind::BoxedKind;
   708→    mod not {
   709→        #[doc(hidden)]
   710→        pub trait Bool {

macros.rs
    58→macro_rules! bail {
    70→macro_rules! __ensure {
   204→macro_rules! anyhow {
   230→macro_rules! __anyhow {

nightly.rs
    10→pub use core::error::Request;

ptr.rs
     5→#[repr(transparent)]
     6→pub struct Own<T>
     7→where
     8→    T: ?Sized,
     9→{
    10→    pub ptr: NonNull<T>,
    11→}
    63→#[repr(transparent)]
    64→pub struct Ref<'a, T>
    65→where
    66→    T: ?Sized,
    67→{
    68→    pub ptr: NonNull<T>,
    69→    lifetime: PhantomData<&'a T>,
    70→}
   124→#[repr(transparent)]
   125→pub struct Mut<'a, T>
   126→where
   127→    T: ?Sized,
   128→{
   129→    pub ptr: NonNull<T>,
   130→    lifetime: PhantomData<&'a mut T>,
   131→}
   181→pub trait CastTo {
   182→    type Target;
   183→}
   186→    type Target = T;

wrapper.rs
     5→use alloc::boxed::Box;
     8→use crate::nightly::{self, Request};
    10→#[repr(transparent)]
    11→pub struct MessageError<M>(pub M);
    33→#[repr(transparent)]
    34→pub struct DisplayError<M>(pub M);
    56→#[cfg(any(feature = "std", not(anyhow_no_core_error)))]
    57→#[repr(transparent)]
    58→pub struct BoxedError(pub Box<dyn StdError + Send + Sync>);
